--- a/timepass/build.gradle
+++ b/timepass/build.gradle
@@ -14,3 +14,12 @@ repositories {
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
+
+sourceSets.main.java.srcDirs = ['src']
+jar {
+    manifest {
+        attributes 'Implementation-Title': 'Gradle Quickstart',
+                'Implementation-Version': version,
+                'Main-Class': 'com.home.test.Solution'
+    }
+}
